--- a/templates/advisor/advisor_profile.html
+++ b/templates/advisor/advisor_profile.html
@@ -24,9 +24,11 @@
 <div class="container">
     <div class="row mt-2">
         <div class="col-2">
+            <div class="fw-bolder">Advisor: {{data.name}}</div>
+            <div class="fw-bolder">ID: {{data.employee_id}}</div>
             <div class="list-group">
-                <a href="{% url 'advisor_statics' advisor_id=data.employee_id %}" class="list-group-item">Static</a>
-                <a href="{% url 'advisor_notifications' advisor_id=data.employee_id %}" class="list-group-item">Requests</a>
+                <a href="{% url 'advisor_statics' advisor_id=data.employee_id %}" class="list-group-item">Statistics</a>
+                <a href="{% url 'advisor_requests' advisor_id=data.employee_id %}" class="list-group-item">Requests</a>
                 <a href="{% url 'advisor_profile' employee_id=data.employee_id %}" class="list-group-item active">Profile</a>
                 <a href="{% url 'advisor_search' advisor_id=data.employee_id %}" class="list-group-item">Search</a>
             </div>
