--- a/templates/advisor/advisor_search.html
+++ b/templates/advisor/advisor_search.html
@@ -23,9 +23,11 @@
 <div class="container">
     <div class="row mt-2">
         <div class="col-2">
+            <div class="fw-bolder">Advisor: {{data.advisor_name}}</div>
+            <div class="fw-bolder">ID: {{data.advisor_id}}</div>
             <div class="list-group">
-                <a href="{% url 'advisor_statics' advisor_id=data.advisor_id %}" class="list-group-item">Static</a>
-                <a href="{% url 'advisor_notifications' advisor_id=data.advisor_id %}" class="list-group-item">Requests</a>
+                <a href="{% url 'advisor_statics' advisor_id=data.advisor_id %}" class="list-group-item">Statistics</a>
+                <a href="{% url 'advisor_requests' advisor_id=data.advisor_id %}" class="list-group-item">Requests</a>
                 <a href="{% url 'advisor_profile' employee_id=data.advisor_id %}" class="list-group-item">Profile</a>
                 <a href="{% url 'advisor_search' advisor_id=data.advisor_id %}"
                    class="list-group-item active">Search</a>
@@ -37,11 +39,6 @@
                        aria-label="Search" aria-describedby="search-addon"/>
                 <button type="button" class="btn btn-outline-primary" onclick="setGetParameter()">search</button>
             </div>
-            <!--            show searched result-->
-<!--            <div>-->
-<!--                <button class="btn btn-danger">Edit</button>-->
-<!--                <button class="btn btn-primary">Save</button>-->
-<!--            </div>-->
         </div>
     </div>
 </div>
