--- a/templates/advisor/advisor_profile.html
+++ b/templates/advisor/advisor_profile.html
@@ -2,25 +2,20 @@
 <html>
 <title>Advisor Homepage</title>
 <head>
+    {% load static %}
+    <script src="{% static 'advisor.js' %}"  type="text/javascript"></script>
     <style>
         #topBlackBar {
             border-top: 50px solid #000;
         }
     </style>
-</head>
-<body>
-<div id="topBlackBar"/>
-</body>
-</html>
-<html lang="en">
-
-<head>
     <meta charset="UTF-8">
     <title>Advisor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
+<div id="topBlackBar"/>
 <div class="container">
     <div class="row mt-2">
         <div class="col-2">
@@ -29,6 +24,8 @@
             <div class="list-group">
                 <a href="{% url 'advisor_statics' advisor_id=data.employee_id %}" class="list-group-item">Statistics</a>
                 <a href="{% url 'advisor_requests' advisor_id=data.employee_id %}" class="list-group-item">Requests</a>
+                <a href="{% url 'advisor_students' advisor_id=data.employee_id %}" class="list-group-item">My
+                    Students</a>
                 <a href="{% url 'advisor_profile' employee_id=data.employee_id %}" class="list-group-item active">Profile</a>
                 <a href="{% url 'advisor_search' advisor_id=data.employee_id %}" class="list-group-item">Search</a>
             </div>
@@ -37,24 +34,21 @@
             <div class="form-group row">
                 <lable for="advisor-name" class="col-2 col-form-label mb-2">Name</lable>
                 <div class="col-10">
-                    <div id="advisor-name" class="form-control mb-2">{{data.name}}</div>
+                    <div id="advisor-name" class=" mb-2">{{data.name}}</div>
                 </div>
                 <lable for="advisor-id" class="col-2 col-form-label mb-2">Employee ID</lable>
                 <div class="col-10">
-                    <div id="advisor-id" class="form-control mb-2">{{data.employee_id}}</div>
+                    <div id="advisor-id" class=" mb-2">{{data.employee_id}}</div>
                 </div>
                 <lable for="advisor-email" class="col-2 col-form-label mb-2">Email</lable>
                 <div class="col-10">
-                    <div id="advisor-email" class="form-control mb-2">{{data.email}}</div>
+                    <div id="advisor-email" class="mb-2">{{data.email}}</div>
                 </div>
                 <lable for="advisor-phone" class="col-2 col-form-label mb-2">Phone</lable>
                 <div class="col-10">
-                    <div id="advisor-phone" class="form-control mb-2">{{data.phone}}</div>
+                    <input type="text" id="advisor-phone" class="form-control mb-2" value="{{data.phone}}"></input>
+                    <button class="btn btn-primary" onclick="updateAdvisorPhone({{data.employee_id}}, document.getElementById('advisor-phone').value)">Save</button>
                 </div>
-            </div>
-            <div class="d-flex justify-content-around pt-2">
-                <button class="btn btn-primary">Edit</button>
-                <button class="btn btn-primary">Save</button>
             </div>
         </div>
     </div>
