--- a/templates/advisor/advisor_requests.html
+++ b/templates/advisor/advisor_requests.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
-<html>
-<title>Advisor Homepage</title>
+<html lang="en">
 <head>
+    {% load static %}
+    <script src="{% static 'advisor.js' %}"  type="text/javascript"></script>
     <style>
         #topBlackBar {
             border-top: 50px solid #000;
         }
     </style>
-</head>
-<body>
-<div id="topBlackBar"/>
-</body>
-</html>
-<html lang="en">
-<head>
     <meta charset="UTF-8">
     <title>Advisor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
+<div id="topBlackBar"/>
 <div class="container">
     <div class="row mt-2">
         <div class="col-2">
@@ -28,6 +23,8 @@
             <div class="list-group">
                 <a href="{% url 'advisor_statics' advisor_id=data.advisor_id %}" class="list-group-item">Statistics</a>
                 <a href="{% url 'advisor_requests' advisor_id=data.advisor_id %}" class="list-group-item active">Requests</a>
+                <a href="{% url 'advisor_students' advisor_id=data.advisor_id %}" class="list-group-item">My
+                    Students</a>
                 <a href="{% url 'advisor_profile' employee_id=data.advisor_id %}" class="list-group-item">Profile</a>
                 <a href="{% url 'advisor_search' advisor_id=data.advisor_id %}" class="list-group-item">Search</a>
             </div>
@@ -41,43 +38,15 @@
                 <div class="bg-light rounded p-2">
                     <p class="fw-bolder">Course Plan</p>
                     {% for c in pending.courses %}
-
                         <p>{{c.course_id}} {{c.course_name}}</p>
-
                     {% endfor %}
                 </div>
-                <button class="btn btn-primary" onclick="approve({{pending.nuid}})">Approve</button>
-                <button class="btn btn-danger" onclick="reject({{pending.nuid}})">Reject</button>
+                <button class="btn btn-primary" onclick="approve({{pending.nuid}}, {{data.advisor_id}})">Approve</button>
+                <button class="btn btn-danger" onclick="reject({{pending.nuid}}, {{data.advisor_id}})">Reject</button>
             </div>
             {% endfor %}
         </div>
     </div>
 </div>
-<script>
-    function approve(nuid) {
-        url = "/api/advisor/approve?nuid=" + nuid;
-        fetch(url).then(function(response) {
-            return response.json();
-        }).then(function(data) {
-            console.log(data);
-            alert("Approved successfully!")
-            location.reload()
-        }).catch(function() {
-            console.log("error");
-        });
-    }
-    function reject(nuid) {
-        url = "/api/advisor/reject?nuid=" + nuid;
-        fetch(url).then(function(response) {
-            return response.json();
-        }).then(function(data) {
-            console.log(data);
-            alert("Rejected successfully!")
-            location.reload()
-        }).catch(function() {
-            console.log("error");
-        });
-    }
-</script>
 </body>
 </html>
