--- a/templates/advisor/advisor_students.html
+++ b/templates/advisor/advisor_students.html
@@ -2,54 +2,105 @@
 <html>
 <title>Advisor Homepage</title>
 <head>
+    {% load static %}
+    <script src="{% static 'advisor.js' %}" type="text/javascript"></script>
     <style>
         #topBlackBar {
             border-top: 50px solid #000;
         }
     </style>
-</head>
-<body>
-<div id="topBlackBar"/>
-</body>
-</html>
-<html lang="en">
-<head>
     <meta charset="UTF-8">
     <title>Advisor</title>
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cdbootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cdbootstrap/css/cdb.min.css"/>
-    <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/cdb.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/9d1d9a82d2.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
 </head>
-<style>
-    .chart-container {
-        max-width: 500px;
-    }
-</style>
+
 <body>
+<div id="topBlackBar"/>
+
 <div class="container">
     <div class="row mt-2">
         <div class="col-2">
             <div class="fw-bolder">Advisor: {{data.advisor_name}}</div>
             <div class="fw-bolder">ID: {{data.advisor_id}}</div>
             <div class="list-group">
-                <a href="{% url 'advisor_statics' advisor_id=data.advisor_id %}" class="list-group-item active">Statistics</a>
+                <a href="{% url 'advisor_statics' advisor_id=data.advisor_id %}" class="list-group-item">Statistics</a>
                 <a href="{% url 'advisor_requests' advisor_id=data.advisor_id %}" class="list-group-item">Requests</a>
-                <a href="{% url 'advisor_students' advisor_id=data.advisor_id %}" class="list-group-item">My
+                <a href="{% url 'advisor_students' advisor_id=data.advisor_id %}" class="list-group-item active">My
                     Students</a>
                 <a href="{% url 'advisor_profile' employee_id=data.advisor_id %}" class="list-group-item">My Profile</a>
                 <a href="{% url 'advisor_search' advisor_id=data.advisor_id %}" class="list-group-item">Search</a>
             </div>
         </div>
         <div class="col-10">
+            <h3>Add a new student</h3>
+            <form>
+                <div class="form-group">
+                    <label for="new-nuid">NUID</label>
+                    <input type="text" class="form-control" id="new-nuid" aria-describedby="emailHelp">
+                </div>
+                <div class="form-group">
+                    <label for="new-name">Name</label>
+                    <input type="text" class="form-control" id="new-name">
+                </div>
+                <div class="form-group">
+                    <label for="new-bd">Birth date</label>
+                    <input type="date" class="form-control" id="new-bd">
+                </div>
+                <div class="form-group">
+                    <label for="new-phone">Phone</label>
+                    <input type="text" class="form-control" id="new-phone">
+                </div>
+                <div class="form-group">
+                    <label for="new-campus">Campus</label>
+                    <input type="text" class="form-control" id="new-campus">
+                </div>
+                <div class="form-group">
+                    <label for="new-department">Department</label>
+                    <input type="text" class="form-control" id="new-department">
+                </div>
+                <div class="form-group">
+                    <label for="new-college">College</label>
+                    <input type="text" class="form-control" id="new-college">
+                </div>
+                <div class="form-group">
+                    <label for="new-email">Email address</label>
+                    <input type="email" class="form-control" id="new-email" aria-describedby="emailHelp">
+                </div>
+                <div class="form-group">
+                    <label for="new-password">Password</label>
+                    <input type="password" class="form-control" id="new-password">
+                </div>
+                <button type="submit" class="btn btn-primary mt-2"
+                        onclick="insertNewStudent(
+                            {{data.advisor_id}},
+                            document.getElementById('new-nuid').value,
+                            document.getElementById('new-name').value,
+                            document.getElementById('new-bd').value,
+                            document.getElementById('new-phone').value,
+                            document.getElementById('new-campus').value,
+                            document.getElementById('new-department').value,
+                            document.getElementById('new-college').value,
+                            document.getElementById('new-email').value,
+                            document.getElementById('new-password').value)">Submit</button>
+            </form>
+            <h3 class="mt-5">All students</h3>
+            {% for s in data.students %}
+            <div class="m-2 p-2 bg-light rounded mb-3">
+                <h4 class="border border-primary rounded p-2">Name: {{s.1}}</h4>
+                <p>NUID: {{s.0}}</p>
+                <label for="new-hours">Semester hour:</label>
+                <input id= "new-hours" type="number" value="{{s.11}}"></input>
+                <button class="btn btn-outline-primary" onclick="updateHours({{s.0}}, document.getElementById('new-hours').value)" ">Submit</button>
+                <p>GPA: {{s.10}}</p>
+                <p>Student email: {{s.2}}</p>
+                <p>Student campus: {{s.4}}</p>
+                <p>Student college: {{s.5}}</p>
+                <p>Student department: {{s.6}}</p>
+            </div>
 
+            {% endfor %}
         </div>
     </div>
 </div>
