Update student registration

--- a/templates/student/student_list.html
+++ b/templates/student/student_list.html
@@ -15,7 +15,7 @@
   <tr>
    <td>{{ student.name }}</td>
    <td>
-    <a href="{% url "student_detail" student.nuid %}">Login</a>
+    <a href="{% url "student_profile" student.nuid %}">Login</a>
    </td>
   </tr>
  {% endfor %}
