--- a/templates/admin_template/add_advisor_template.html
+++ b/templates/admin_template/add_advisor_template.html
@@ -69,22 +69,24 @@
                                 <div class="form-row form-add-course">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Department:  </label>
-                                        <select name="department_name" class="filter-selectbox">
-                                        {% for advisor in advisors %}
-                                        <option value="{{ advisor.department.department_name }}">{{ advisor.department.department_name }}</option>
-                                        {% endfor %}
+                                        <select name="department_name" name="department_name">
+                                            <option value="computerscience">Computer Science</option>
+                                            <option value="informatics">Informatics</option>
+                                            <option value="datascience">Data Science</option>
+                                            <option value="dataanalytics">Data Analytics</option>
+                                            <option value="informationsystem">Information System</option>
+                                            <option value="quantitativefinance">Quantitative Finance</option>
+                                            <option value="softwereengineering">Softwere Engineering</option>
                                         </select>
                                     </div>
                                 </div>
                             </div>
                 
                             
+                            <br>
                             {% csrf_token %}
-                            <div class="row justify-content-md-center col-12 text-center">
-                                <div class=" " style="margin-top: 20px;">
-                                    <button type="submit" class="btn text-light w-25 pe-4 ps-4"
-                                        style="background-color: rgb(78, 183, 181)">Add</button>
-                                </div>
+                            <div class="d-flex justify-content-around pt-2">
+                                <button class="btn btn-primary">Add</button>
                             </div>
                         </div>
                     </form>
