--- a/templates/admin_template/edit_advisor_template.html
+++ b/templates/admin_template/edit_advisor_template.html
@@ -13,7 +13,67 @@
                     <div class="card-header">
                         <h3 class="card-title">{{page_title}}</h3>
                     </div>
-                    {% include "admin_template/standard_form.html" with messages=messages  form=form button_text="Update Advisor"%}
+                    <form method="post" action="/add_course" class="needs-validation" enctype="multipart/form-data" novalidate>
+                        <div class="row justify-content-md-center form-column">
+                            
+                            <div class="col col-md-9 col-12 form-add-course">
+                                <div class="form-row form-add-course">
+                                    <div class="col-3 mb-3">
+                                        <label class="form-label">Employee ID:  </label>
+                                        <input type="number" name="employeeid" class="form-control" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col col-md-9 col-12 form-add-course">
+                                <div class="form-row form-add-course">
+                                    <div class="col-3 mb-3">
+                                        <label class="form-label">Name:  </label>
+                                        <input type="text" name="name" class="form-control" required>
+                                    </div>
+                                </div>
+                            </div>
+                
+                            <div class="col col-md-9 col-12">
+                                <div class="form-row form-add-course">
+                                    <div class="col-3 mb-3">
+                                        <label class="form-label">Email:  </label>
+                                        <input type="text" name="email" class="form-control" required>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col col-md-9 col-12">
+                                <div class="form-row form-add-course">
+                                    <div class="col-3 mb-3">
+                                        <label class="form-label">Phone:  </label>
+                                        <input type="text" name="phone" class="form-control" required>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col col-md-9 col-12">
+                                <div class="form-row form-add-course">
+                                    <div class="col-3 mb-3">
+                                        <label class="form-label">Department:  </label>
+                                        <select name="department_name" name="department_name">
+                                            <option value="computerscience">Computer Science</option>
+                                            <option value="informatics">Informatics</option>
+                                            <option value="datascience">Data Science</option>
+                                            <option value="dataanalytics">Data Analytics</option>
+                                            <option value="informationsystem">Information System</option>
+                                            <option value="quantitativefinance">Quantitative Finance</option>
+                                            <option value="softwereengineering">Softwere Engineering</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                
+                            
+                            <br>
+                            {% csrf_token %}
+                            <div class="d-flex justify-content-around pt-2">
+                                <button class="btn btn-primary">Update</button>
+                            </div>
                 </div>
                 <!-- /.card -->
 
